# nyc-taxi-eta

./: .gitignore  README.md  pyproject.toml
data/bronze/yellow_taxi/_delta_log/: .00000000000000000000.crc.crc  .00000000000000000000.json.crc  .00000000000000000001.crc.crc  .00000000000000000001.json.crc  .00000000000000000002.crc.crc  .00000000000000000002.json.crc  .00000000000000000003.crc.crc  .00000000000000000003.json.crc  .00000000000000000004.crc.crc  .00000000000000000004.json.crc  .00000000000000000005.crc.crc  .00000000000000000005.json.crc  .00000000000000000006.crc.crc  .00000000000000000006.json.crc  .00000000000000000007.crc.crc  .00000000000000000007.json.crc  .00000000000000000008.crc.crc  .00000000000000000008.json.crc  .00000000000000000009.crc.crc  .00000000000000000009.json.crc  .00000000000000000010.crc.crc  .00000000000000000010.json.crc  ._last_checkpoint.crc  _last_checkpoint
data/metastore/bronze/green_taxi_trips/_delta_log/: .00000000000000000000.crc.crc  .00000000000000000000.json.crc  .00000000000000000001.crc.crc  .00000000000000000001.json.crc
documents/00_business_requirements/: BRD_v1.0_NYC_Taxi_ETA_Prediction.md
notebooks/: downloader.ipynb  starter.ipynb  uc-catalog-learning.ipynb
notebooks/00_experimentation/: 00_downloader.ipynb  02_ingest_bronze_green_taxi.ipynb  02_ingest_bronze_yellow_taxi.ipynb  03_run_silver_yellow_taxis.ipynb
notebooks/new_start/: understand_data.ipynb
src/nyc_taxi_eta/components/: data_ingestion.py
src/nyc_taxi_eta/configs/: settings.py
tests/: sample_test.py
(+4 files in other folders)
