[project]
name = "nyc-taxi-eta"
version = "0.1.0"
description = "This project aims to estimate the Expected Time of Arrival (ETA) for taxis in New York City. By leveraging weather data and taxi trip data sourced from the NYC Open Data platform, the project provides insights and predictions to improve transportation efficiency and user experience."
readme = "README.md"
authors = [
    { name = "Ravikumarchavva", email = "ravikumarchavva@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "delta-spark>=4.0.0",
    "geopandas>=1.1.1",
    "missingno>=0.5.2",
    "polars>=1.29.0",
    "pyarrow>=20.0.0",
    "pyspark>=4.0.0",
    "pytest>=8.4.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.3",
    "ruff>=0.11.13",
    "tqdm>=4.67.1",
    "unitycatalog[spark]>=0.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
]

[tool.uv.build-backend]
module-name = "nyc_taxi_eta"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
